# sharework_cell

./: .gitignore  test.yaml
apriltag_cari/: CMakeLists.txt  package.xml
apriltag_cari/config/: settings.yaml  tags.yaml
apriltag_cari/images/: generate_apriltag.m
apriltag_cari/launch/: dual_realsense_test.launch  rs_d435_test.launch  usb_test.launch
sharework_cembre_bringup/: CMakeLists.txt  package.xml
sharework_cembre_bringup/config/: moveit_controllers.yaml  ros2_controllers.yaml
sharework_cembre_bringup/launch/: sharework_cembre_bringup.launch.py
sharework_cembre_configurations/: CMakeLists.txt  package.xml
sharework_cembre_configurations/config/: binary_logger.yaml  controllers_configurations.yaml  controllers_dispatches.yaml  fake_controllers_configurations.yaml  fake_ur10e_hw.yaml  fixed_area_safety.yaml  log.yaml  planner2_controllers.yaml  planner2_hw.yaml  planner_battery_controllers.yaml  planner_battery_hw.yaml  planner_controllers.yaml  planner_ethernet_controllers.yaml  planner_ethernet_hw.yaml  planner_hw.yaml  strip_hw.yaml  thor_safety.yaml  touch_hw.yaml  touch_hw.yaml.autosave  trajectories.yaml  ur10e_controllers.yaml  ur10e_hw.yaml  ur_script_controllers_dispatches.yaml
sharework_cembre_configurations/launch/: control.launch  control.rviz  execute_trj.launch  fake.launch  fake_robot_control.launch  fake_start.launch  fixed_area_safety.launch  gripper.launch  human_detection.launch  log.launch  moveit.launch  real.launch  real_pc2.launch  real_start.launch  robot_control.launch  rviz.launch  safety.launch  start.launch  thor_safety.launch  urscript.launch
sharework_cembre_demo_safety/: CMakeLists.txt  package.xml
sharework_cembre_demo_safety/config/: trajectories.yaml
sharework_cembre_demo_safety/launch/: demo.launch  demo.rviz  execute_trj.launch
sharework_cembre_description/: CMakeLists.txt  package.xml
sharework_cembre_description/config/: cembre_ur10e.yaml  joint_limits.yaml  log.yaml  realsense_params.yaml  view_cell.rviz  zed_params.yaml
sharework_cembre_description/launch/: bagplay.launch  bagplay_eut.launch  cameras.launch  cameras.launch.py  cameras_tf.launch.py  display.launch.py  dual_realsense.launch.py  log.launch  test.launch  upload.launch  ur10e_upload.launch  zed_camera.launch.py
sharework_cembre_description/matlab_script/: test_log.m  test_log.m~
sharework_cembre_description/mesh/: squadra120mm.STL  squadra40mm.STL
sharework_cembre_description/urdf/: sharework_cell.urdf.xacro  sharework_cell.xacro  sharework_cembre.xacro  sharework_cembre_simplified.xacro  sharework_fixed_parts.xacro  sharework_sensors.xacro
sharework_cembre_description/urdf/old/: sharework_cembre.xacro
sharework_cembre_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sharework_cembre_moveit_config/config/: dirrt_jf_test_planning.yaml  dirrt_planning.yaml  dirrt_planning_1.yaml  dirrt_planning_base.yaml  fake_controllers.yaml  ha_planning.yaml  initial_positions.yaml  irrt_avoid_planning.yaml  joint_limits.yaml  joint_limits_full.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros_controllers.yaml  sharework.srdf  sharework_cell.ros2_control.xacro  sharework_cell.srdf  sharework_cell.urdf.xacro  sharework_cembre_simplified.srdf  sharework_simplified.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml  zeros_demo.yaml
sharework_cembre_moveit_config/default_warehouse_mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--6584445795637186350.wt  collection-16--6584445795637186350.wt  collection-2--6584445795637186350.wt  collection-24--6584445795637186350.wt  sizeStorer.wt  (+15 more)
sharework_cembre_safety/: CMakeLists.txt  package.xml
sharework_cembre_safety/config/: thor_safety.yaml  thor_safety_mediapipe.yaml
sharework_cembre_safety/launch/: safety.launch  safety_mediapipe.launch  thor_safety.launch
sharework_cembre_sensors/: CMakeLists.txt  package.xml
sharework_cembre_skills/: CMakeLists.txt  package.xml
(+70 files in other folders)
