<?xml version="1.0"?>
<package format="2">
  <name>sharework_cembre_demo_safety</name>
  <version>0.0.0</version>
  <description>The sharework_cembre_demo_safety package</description>
  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
