<?xml version="1.0"?>
<package format="2">
  <name>sharework_cembre_description</name>
  <version>0.0.0</version>
  <description>The sharework_cembre_description package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel</maintainer>
  <license>BSD</license>
  <url type="website">https://sharework-project.eu/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
